@@ -1,5 +1,7 @@
 plugins {
-    `java-library`
+  alias(libs.plugins.kotlinJvm)
+  alias(libs.plugins.protobuf)
+  alias(libs.plugins.mavenPublish)
 }
 
 dependencies {
@@ -10,5 +12,13 @@ dependencies {
 
     testImplementation(libs.assertj)
     testImplementation(libs.junitApi)
+    testImplementation(libs.junitParams)
+    testImplementation(libs.junitPioneer)
     testImplementation(libs.kotlinTest)
+}
+
+// Allows us to set environment variables in tests using JUnit Pioneer
+tasks.test {
+  jvmArgs("--add-opens", "java.base/java.util=ALL-UNNAMED")
+  jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
 }
